syntax = "proto3";

option go_package = "storage";

message FileHeader {
    string id = 1;
    int64 file_end = 2;
    string last_entry_id = 3;
}

enum Op {
    None = 0;
    Del = 1;
    Modify = 2;
    Discard = 3;
}

message LogEntry {
    int32 op = 1;
    string key = 2;
    string value = 3;
    string gid = 4;
    repeated string discard_gids = 5;
}
